# maestro

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  promote-staging.yml  release.yml
apps/maestro-cli/: CMakeLists.txt  main.cpp
apps/maestro-desktop/: ApprovalPanel.cpp  ApprovalPanel.hpp  CMakeLists.txt  EngineController.cpp  EngineController.hpp  GraphCanvas.cpp  GraphCanvas.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
cmake/: Warnings.cmake
docs/superpowers/plans/: 2026-07-09-milestone-0-1-skeleton-and-process-spine.md  2026-07-09-milestone-2-provider-layer.md  2026-07-09-milestone-3-core-domain.md  2026-07-10-milestone-4-scheduler-concurrency.md  2026-07-10-milestone-5-persistence.md
docs/superpowers/specs/: 2026-07-09-maestro-architecture-design.md  2026-07-12-maestro-v2-interactive-nucleus-acp-design.md
libs/acp/: CMakeLists.txt
libs/acp/include/maestro/acp/: AcpClient.hpp  ApprovalBroker.hpp  FakeAcpTransport.hpp  IAcpTransport.hpp  JsonRpc.hpp  Nucleus.hpp  Plan.hpp  PlanApprovalGate.hpp  SessionController.hpp  SessionManager.hpp  SteerQueue.hpp
libs/acp/src/: AcpClient.cpp  ApprovalBroker.cpp  JsonRpc.cpp  Nucleus.cpp  Plan.cpp  PlanApprovalGate.cpp  SessionController.cpp  SessionManager.cpp
libs/core/: CMakeLists.txt
libs/core/include/maestro/core/: Ids.hpp  ProcessSpec.hpp  Provider.hpp  SessionId.hpp
libs/orchestrator/: CMakeLists.txt
libs/orchestrator/include/maestro/orchestrator/: Agent.hpp  AgentManager.hpp  Execution.hpp  Orchestrator.hpp  Scheduler.hpp  Task.hpp  TaskGraph.hpp  WorkspaceManager.hpp
libs/orchestrator/src/: AgentManager.cpp  Orchestrator.cpp  Scheduler.cpp  TaskGraph.cpp  WorkspaceManager.cpp
libs/process/: CMakeLists.txt
libs/process/include/maestro/process/: FakeProcessBackend.hpp  IProcessBackend.hpp  IPumpedBackend.hpp  PosixProcessBackend.hpp  ProcessManager.hpp
libs/process/src/: FakeProcessBackend.cpp  PosixProcessBackend.cpp  ProcessManager.cpp
libs/process_qt/: CMakeLists.txt
libs/process_qt/include/maestro/process_qt/: QtProcessBackend.hpp
libs/process_qt/src/: QtProcessBackend.cpp
libs/providers/: CMakeLists.txt
libs/providers/include/maestro/providers/: ClaudeProvider.hpp  GenericCliProvider.hpp  NdjsonLineReader.hpp
libs/providers/src/: ClaudeProvider.cpp  GenericCliProvider.cpp  NdjsonLineReader.cpp
libs/runtime/: CMakeLists.txt
libs/runtime/include/maestro/runtime/: ProcessAcpTransport.hpp  ProcessTaskExecutor.hpp  ProviderRegistry.hpp  ResultCollector.hpp  RunRecorder.hpp
libs/runtime/src/: ProcessTaskExecutor.cpp  ProviderRegistry.cpp  ResultCollector.cpp  RunRecorder.cpp
libs/storage/: CMakeLists.txt
libs/storage/include/maestro/storage/: Records.hpp  SqliteStore.hpp
libs/storage/src/: SqliteStore.cpp
libs/worktree/: CMakeLists.txt
libs/worktree/include/maestro/worktree/: FakeGitRunner.hpp  IGitRunner.hpp  RealGitRunner.hpp  WorktreeManager.hpp
libs/worktree/src/: RealGitRunner.cpp  WorktreeManager.cpp
tests/: CMakeLists.txt
tests/integration/: test_acp_process_integration.cpp  test_posix_backend.cpp  test_process_task_executor.cpp  test_run_recorder.cpp  test_worktree_integration.cpp
tests/unit/: test_acp_client.cpp  test_agent_manager.cpp  test_approval_broker.cpp  test_claude_provider.cpp  test_generic_provider.cpp  test_jsonrpc.cpp  test_ndjson_reader.cpp  test_nucleus.cpp  test_orchestrator.cpp  test_process_manager.cpp  test_provider_contract.cpp  test_result_collector.cpp  test_scheduler.cpp  test_session_controller.cpp  test_session_manager.cpp  test_smoke.cpp  test_sqlite_store.cpp  test_sqlite_store_v2.cpp  test_steer_queue.cpp  test_task_graph.cpp  test_workspace.cpp  test_worktree_manager.cpp
tools/fake-acp-agent/: CMakeLists.txt  main.cpp
tools/qt-smoke/: CMakeLists.txt  main.cpp
